# active-tracker

./: .gitignore  .gitmodules  LICENSE  README.md
casing/: Counter_weight__lid_v1.stl  Counter_weight_left_side_v1.stl  Counter_weight_right_side_v1.stl  base_case.py  dimensions.py  lora-tracker-base-v2.stl  lora-tracker-base.stl  lora-tracker-top-v2.stl  lora-tracker-top.stl  main_case.FCMacro  top_case.py
decoder/: decoder.js
firmware/: CMakeLists.txt  README.md  deploy.md  main.cpp
firmware/classifier/: CMakeLists.txt  classifier.cpp  imu.cpp  imu.h  tf_model.h  tflite_classifier.cpp  tflite_classifier.h
firmware/classifier/filter/: imuFilter.tpp
firmware/gps/: CMakeLists.txt  gps.cpp  gps_pico.cpp  gps_pico.h
firmware/include/: classifier.h  data_structs.h  debug.h  gps.h  i2c_bus.h  lora.h  lowpower.h  main.h  storage.h  uart.h
firmware/lib/: CMakeLists.txt  LoraEncoder.cpp  LoraEncoder.h  LoraMessage.cpp  LoraMessage.h  i2c_bus.cpp  sfe_bus.cpp  sfe_bus.h
firmware/lora/: CMakeLists.txt  lora.cpp
firmware/lowpower/: CMakeLists.txt  lowpower.cpp
firmware/storage/: CMakeLists.txt  pico_lfs.h  pico_lfs_hal.c  pico_lfs_hal.h  storage.cpp
gps_deploy/: gps_deploy.h  gps_deploy.ino  lora.cpp  lora.h  storage.cpp  storage.h
test_area/gps/: gps.ino
test_area/gps_deploy/: gps_deploy.ino  lora.cpp  lora.h  sketch.yaml
test_area/gps_reduced_lib/: gps_reduced_lib.ino  u-blox_GNSS.cpp  u-blox_GNSS.h
test_area/imu/: classifier.cpp  classifier.h  imu.ino
test_area/lora/: lora.ino
test_area/lowpower/: lowpower.ino
test_area/pico/gps/: CMakeLists.txt  gps.c
test_area/pico/gps/lib/: gps_pico.cpp  gps_pico.h  sfe_bus.cpp  sfe_bus.h  sfe_bus_arduino.cpp  sfe_bus_arduino.h
test_area/pico/imu/: CMakeLists.txt  classifier.cpp
test_area/pico/imu/lib/: IMU.cpp  IMU.h  sfe_bus.cpp  sfe_bus.h
test_area/pico/imu/lib/filter/: imuFilter.h
test_area/pico/lowpower/: lowpower.cpp
test_area/pico/storage/: CMakeLists.txt  pico_flash_fs.h  storage.c  storage.cpp
test_area/pico/storage/lib/: pico_lfs_hal.c  pico_lfs_hal.h
tools/current/: current.ino
tools/lora_dev/: CMakeLists.txt  main.cpp
tools/lora_dev/include/: lora.h  main.h
tools/lora_dev/lora/: CMakeLists.txt  lora.cpp
